--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ul class="advantages-items">
             <li class="advantages-item">
               <div class="advantages-icon-wrapper">
-                <svg class="advantages-icon">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -78,7 +78,7 @@
 
             <li class="advantages-item">
               <div class="advantages-icon-wrapper">
-                <svg class="advantages-icon">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -90,7 +90,7 @@
             </li>
             <li class="advantages-item">
               <div class="advantages-icon-wrapper">
-                <svg class="advantages-icon">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="advantages-item">
               <div class="advantages-icon-wrapper">
-                <svg class="advantages-icon">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -132,28 +132,36 @@
 
                 <p class="section-text person-job">Product Designer</p>
 
-                <div class="person-icons">
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="person-icons">
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="person">
@@ -169,28 +177,36 @@
 
                 <p class="section-text person-job">Frontend Developer</p>
 
-                <div class="person-icons">
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="person-icons">
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="person">
@@ -206,28 +222,36 @@
 
                 <p class="section-text person-job">Marketing</p>
 
-                <div class="person-icons">
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="person-icons">
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="person">
@@ -243,28 +267,36 @@
 
                 <p class="section-text person-job">UI Designer</p>
 
-                <div class="person-icons">
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="person-icon-wrapper" href="" target="_blanc">
-                    <svg class="person-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="person-icons">
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="person-icon-item">
+                    <a class="person-icon-link" href="" target="_blank">
+                      <svg class="person-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -284,11 +316,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
 
               <div class="portfolio-item-data">
@@ -414,30 +446,38 @@
         </div>
 
         <div class="footer-social-media">
-          <h3 class="footer-social-media-title">Social media</h3>
+          <p class="footer-social-media-title">Social media</p>
 
-          <div class="footer-icons">
-            <a class="footer-icon-wrapper" href="" target="_blanc">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-            <a class="footer-icon-wrapper" href="" target="_blanc">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-            <a class="footer-icon-wrapper" href="" target="_blanc">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-            <a class="footer-icon-wrapper" href="" target="_blanc">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </div>
+          <ul class="footer-icons">
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="" target="_blank">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="" target="_blank">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="" target="_blank">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="" target="_blank">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
