--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-data">
                 <h3 class="section-subtitle">Cashless Payment</h3>
@@ -357,11 +357,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-data">
                 <h3 class="section-subtitle">Meditation App</h3>
@@ -377,11 +377,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-data">
                 <h3 class="section-subtitle">Taxi Service</h3>
@@ -397,11 +397,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-data">
                 <h3 class="section-subtitle">Screen Illustrations</h3>
@@ -417,11 +417,11 @@
                   width="360"
                 />
 
-                <div class="portfolio-img-overlay">
+                <p class="portfolio-img-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-data">
                 <h3 class="section-subtitle">Online Courses</h3>
